@@ -1,0 +1,9 @@
+Title: Removed no longer supported (hidden) WATO feature: wato_hidden_users
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i4
+Date: 1486475476
+Class: feature
+
+
