@@ -126,6 +126,7 @@
     * 4018 WATO WebAPI: new functions to manage host, service and contactgroups...
     * 4319 Reworked the service discovery dialog...
     * 4320 Distributed: Master site has now also site specific global settings...
+    * 4022 Removed no longer supported (hidden) WATO feature: wato_hidden_users
     * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
     * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
     * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
